# Simulator

./: .gitignore  .gitmodules  CMakeLists.tpl  CMakeLists.txt  COPYING  Makefile  OPTIMIZATION_PLAN.md  README.md  azure-pipelines.yml  driver.c  driver.json  mcu.c  mingw.cmake  serial.c  serial.h  validator.c  validator_driver.c
.github/workflows/: cmake-multi-platform.yml
src/: build_info.h.in  driver.c  driver.h  eeprom.c  eeprom.h  grbl_eeprom_extensions.c  grbl_eeprom_extensions.h  grbl_interface.c  main.c  mcu.c  mcu.h  planner_inject_accessors.c  platform.h  platform_linux.c  platform_windows.c  serial.c  simulator.c  simulator.h  validator.c  validator_driver.c
